<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2021 Hasan Demirtaş
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  ~
  -->
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>io.github.portlek</groupId>
    <artifactId>ppom</artifactId>
    <version>2.5.3</version>
  </parent>
  <artifactId>BukkitItemBuilder</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <name>BukkitItemBuilder</name>
  <description>Useful item builder library for Bukkit plugins.</description>
  <url>https://github.com/portlek/BukkitItemBuilder</url>
  <scm>
    <url>https://github.com/portlek/BukkitItemBuilder</url>
    <connection>scm:git:git://github.com/portlek/BukkitItemBuilder.git</connection>
    <developerConnection>scm:git:ssh://github.com/portlek/BukkitItemBuilder.git</developerConnection>
  </scm>
  <properties>
    <java.version>11</java.version>
  </properties>
  <dependencies>
    <dependency>
      <groupId>io.github.portlek</groupId>
      <artifactId>bukkit-version</artifactId>
      <version>2.0.9</version>
    </dependency>
    <dependency>
      <groupId>com.github.cryptomorin</groupId>
      <artifactId>XSeries</artifactId>
      <version>7.9.1.1</version>
    </dependency>
    <dependency>
      <groupId>io.github.bananapuncher714</groupId>
      <artifactId>NBTEditor</artifactId>
      <version>7.16</version>
    </dependency>
    <dependency>
      <groupId>org.spigotmc</groupId>
      <artifactId>spigot-api</artifactId>
      <version>1.16.5-R0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>
</project>
